test/errors/error28.vult
fun foo() {
  val x : uint;
}
